[package]
name = "libcnb"
version = "0.3.0"
authors = ["Manuel Fuchs <malax@malax.de>", "Terence Lee <hone02@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"
description = "Rust language binding of the Cloud Native Buildpack spec."
repository = "https://github.com/Malax/libcnb.rs"
documentation = "https://docs.rs/libcnb"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.131", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
anyhow = "1.0.51"
walkdir = "2.3.2"
sha2 = "0.10.0"
tar = "0.4.38"
xz = "0.1.0"
reqwest = { version = "0.11.7", features = ["blocking"] }
tempfile = "3.2.0"
